v0.0.1, 29-Oct-2020 -- initial setup