@@ -11,25 +11,19 @@ def test_001_transform_constructor():
     try:
         a = t.Transform()
     except AssertionError:
-        return(False)
-    else: 
-        return(False)
-    
+        return
+    else:
+        assert( False )# should have died
 
 def test_002_identity_constructor():
-    try:
         a = t.Identity()
-    except: 
-        return(False)
-    
-    s = f"{a}"
-    return s=="Transform( Identity )"
+        assert(f"{a}" == "Transform( Identity )")
 
-def test_003_identity_action():
+def test_003_identity_apply():
     a = t.Identity()
     b = np.ndarray([1,2])
     c = a.apply(b)
-    return(b==c)
+    assert( np.all(b==c) )
 
 def test_004_inverse_constructor():
     try:
@@ -37,10 +31,28 @@ def test_004_inverse_constructor():
     except TypeError:
         a = t.Identity()
         b = t.Inverse(a)
-        return (f"{a}"=="Transform( Inverse Identity )")
+        assert (f"{b}"=="Transform( Inverse Identity )")
     else:
-        return(False)
+        assert (False)  # Should have thrown an error
         
-        
-    
+def test_005_inverse_inverse():
+    a = t.Identity()
+    b = t.Inverse(a)
+    c = t.Inverse(b)
+    assert ( f"{c}" == "Transform( Inverse Inverse Identity )")
+
+def test_006_method_inverse():
+    a = t.Identity()
+    b = a.inverse()
+    c = b.inverse()
+    assert ( f"{c}" == f"{a}"  and  f"{b}"=="Transform( Inverse Identity )")
+
+def test_007_composition_constructor():
+    a = t.Identity()
+    b = a.inverse()
+    c = t.Composition(a,b)
+    d = c.inverse()
+    assert ( f"{c}" == "Transform( ( (Identity) o (Inverse Identity) ) )"\
+        and  f"{d}" == "Transform( Inverse ( (Identity) o (Inverse Identity) ) )")
+
 
